--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 /* -------------------------------------------------------------------------- */
+/*                                   z-index                                  */
+/* -------------------------------------------------------------------------- */
+/* 
+  # Header
+    - Background color div..........................................: -z-10
+    - Content.......................................................: -
+ */
+
+/* -------------------------------------------------------------------------- */
 /*                                   Colors                                   */
 /* -------------------------------------------------------------------------- */
 
@@ -13,6 +22,9 @@
     --color-coral-red: 0deg 93% 64%;
     /* secondary */
     --color-obsidian: 240deg 14% 11%;
+    /* tertiary */
+    --color-coral-blush: 0deg 100% 79%;
+    --color-stormy-gray: 240deg 12% 30%;
   }
 }
 
@@ -83,7 +95,7 @@
 }
 
 /* -------------------------------------------------------------------------- */
-/*                             Typography Presets                             */
+/*                                 Typography                                 */
 /* -------------------------------------------------------------------------- */
 
 /* Headings */
@@ -120,7 +132,7 @@
 /* Body */
 @layer components {
   .text-preset-body {
-    @apply text-[15px] font-normal leading-[25px];
+    @apply font-commissioner text-[15px] font-normal leading-[25px];
   }
 
   @screen lg {
