feat: implement responsive mobile menu component
- Add mobile menu dropdown using shadcn/ui components
- Handle responsive behavior with window size breakpoints
- Include navigation links with custom styling variants

--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -7,8 +7,9 @@
 /* -------------------------------------------------------------------------- */
 /* 
   # Header
-    - Background color div..........................................: -z-10
-    - Content.......................................................: -
+    - Background-color div........................................: -z-10
+    - Content.....................................................: undefined
+    - Mobile Menu.................................................: z-50
  */
 
 /* -------------------------------------------------------------------------- */
