--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -10,6 +10,11 @@
     - Background-color div........................................: -z-10
     - Content.....................................................: undefined
     - Mobile Menu.................................................: z-50
+
+  # Hero Section
+    - Mobile Image................................................: undefined
+    - Desktop & Tablet Background Images..........................: -z-10
+    - Content.....................................................: undefined
  */
 
 /* -------------------------------------------------------------------------- */
