feat: implement strategy section

--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -7,14 +7,19 @@
 /* -------------------------------------------------------------------------- */
 /* 
   # Header
-    - Background-color div........................................: -z-10
+    - Background-Color Div........................................: -z-10
     - Content.....................................................: undefined
     - Mobile Menu.................................................: z-50
 
   # Hero Section
     - Mobile Image................................................: undefined
-    - Desktop & Tablet Background Images..........................: -z-10
+    - Background Images (Tablet & Desktop)........................: -z-10
     - Content.....................................................: undefined
+
+  # Strategy Section
+    - Section Images..............................................: undefined
+    - Content.....................................................: undefined
+    - Decorative Pattern (Red Wave)...............................: z-10
  */
 
 /* -------------------------------------------------------------------------- */
