feat: implement CTA section
- Create responsive CTA section component
- Implement responsive layout
- Add heading and call-to-action button
- Add decorative wave pattern

--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -5,11 +5,15 @@
 /* -------------------------------------------------------------------------- */
 /*                                   z-index                                  */
 /* -------------------------------------------------------------------------- */
+
 /* 
-  # Header
+  <--------------------------------- Header --------------------------------->
+  
     - Absolute-positioned (#F94F4F background-color) div............: -z-10
     - Content.......................................................: null
     - Mobile menu...................................................: z-50
+  
+  <-------------------------------- Homepage -------------------------------->
 
   # Hero Section
     - Mobile image..................................................: null
@@ -32,6 +36,10 @@
     - Slide info (relative to the carousel item)....................: z-20
     - Carousel controls (relative to the carousel)..................: z-10
     - Decorative (#FFFFFF color) wave pattern svg...................: z-20
+
+  # Cta Section
+    - Content.......................................................: null
+    - Decorative (#F94F4F color) wave pattern svg...................: null
  */
 
 /* -------------------------------------------------------------------------- */
